added header background

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
     <header>
         <h1>Joel Getzke</h1>
-        <div class ="header">
             <nav>
                
                 <ul>
@@ -24,6 +23,12 @@
             </nav>
         </div>
     </header>
+    <section id = page-cover>
+        <figure>
+            <img src="./assets/images/BlueCheckers.jpg">
+        
+        </figure>
+    </section>
 
 
     <main>
