Added commits for easier reading

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
+    <!-- Standard meta data-->
     <title> Joel Getzke's Web Dev Portfolio</title>
     <meta charset="UTF-8">
     <meta name="description" content="Joel Getzke, aspiring Web developer. Welcome to his website portfolio of projects.">
@@ -11,6 +12,7 @@
 <body>
 
     <header>
+        <!-- Links to contact info-->
         <span id = name>Joel Getzke</span>
             <nav>
                 <a href="#About me">About Me</a>
@@ -19,13 +21,14 @@
                 <a href="#Resume">Resume</a></li>
             </nav>
     </header>
+    <!-- Checkered photo added for header cover-->
         <figure id = page-cover>  
         </figure>
     <h1>
-        
+    <!-- could not figure out how to move this span into correct area, please help-->
         <span> Cool Subtitle</span>
     </h1>
-
+    <!-- Start of the main content-->
     <main>
   
         <h2 id="About me">About Me</h2>
