--- a/index.html
+++ b/index.html
@@ -1,57 +1,72 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
     <!-- Standard meta data-->
     <title> Joel Getzke's Web Dev Portfolio</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Joel Getzke, aspiring Web developer. Welcome to his website portfolio of projects.">
+    <meta name="description"
+        content="Joel Getzke, aspiring Web developer. Welcome to his website portfolio of projects.">
     <meta name="Joel Getzke" content="Joel Getzke">
     <link rel="stylesheet" type="text/css" href="./assets/style.css" media="screen" />
 </head>
-   
+
 <body>
 
     <header>
         <!-- Links to contact info-->
-        <span id = name>Joel Getzke</span>
-            <nav>
-                <a href="#About me">About Me</a>
-                <a href="#Work">Work</a>
-                <a href="#Contact me">Contact Me</a>
-                <a href="#Resume">Resume</a></li>
-            </nav>
+        <span id=name>Joel Getzke</span>
+        <nav>
+            <a href="#About me">About Me</a>
+            <a href="#Work">Work</a>
+            <a href="#Contact me">Contact Me</a>
+            <a href="#Resume">Resume</a></li>
+        </nav>
     </header>
     <!-- Checkered photo added for header cover-->
-        <figure id = page-cover>  
-        </figure>
+    <figure id=page-cover>
+    </figure>
     <h1>
-    <!-- could not figure out how to move this span into correct area, please help-->
+        <!-- could not figure out how to move this span into correct area, please help-->
         <span> Cool Subtitle</span>
+    </h1> <br /><br />
     </h1>
     <!-- Start of the main content-->
     <main>
-  
-        <h2 id="About me">About Me</h2>
-            <p>Real easy going guy that can get along with just about anyone.  Looking for a new challenge in life. Looking to find a job with positive people that have flexible minds and want me to be always improving as an employee. When I am off the clock I like going on hikes around Duluth, mn, northshore area.  You can catch me hiking around the trails and foraging for wild mushrooms in the warmer days.</p>
-        <br/><br/><br/><br/>
-        <h2 id="Work">Work</h2>
-            <p> Here is some of my latest work. Let me know if you have any questions.</p>
-            <br/><br/><br/><br/>
+        <section class="personal-info">
+            <h2 id="About me">About Me</h2>
 
-    <h2 id="Contact me">Contact Me</h2>
-    <ul>
-        <l1>Phone Number: 320-583-2401</l1>
-        <li><a href="mailto:joel.getzke21@gmail.com">Email me</a>
-            <br>
-        <l1><a href="https://github.com/Glansburg" target="_blank">Github Profile</a></l1>
-        <li>LinkedIn: In progress...</li>
-    </ul> 
-    <br/><br/><br/><br/>
-        
+            <article class="test">
+                <p>Real easy going guy that can get along with just about anyone. Looking for a new challenge in life.
+                    Looking
+                    to find a job with positive people that have flexible minds and want me to be always improving as an
+                    employee. When I am off the clock I like going on hikes around Duluth, mn, northshore area. You can
+                    catch me
+                    hiking around the trails and foraging for wild mushrooms in the warmer days.</p>
+        </section>
+        </article>
+        <br /><br /><br /><br />
+        <section class="personal-info">
+            <h2 id="Work">Work</h2>
+        </section>
+        <p> Here is some of my latest work. Let me know if you have any questions.</p>
+        <br /><br /><br /><br />
+        <section class="personal-info">
+            <h2 id="Contact me">Contact Me</h2>
+        </section>
+        <ul>
+            <l1>Phone Number: 320-583-2401</l1>
+            <li><a href="mailto:joel.getzke21@gmail.com">Email me</a>
+                <br>
+                <l1><a href="https://github.com/Glansburg" target="_blank">Github Profile</a></l1>
+            <li>LinkedIn: In progress...</li>
+        </ul>
+        <br /><br /><br /><br />
 
-<h2 id="Resume">Resume</h2>
-    <p>PENDING...</p>
-
+        <section class="personal-info">
+            <h2 id="Resume">Resume</h2>
+            <p>PENDING...</p>
+        </section>
 
     </main>
 
