--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h2 id="About me">About Me</h2>
 
             <article class="test">
-                <p>Real easy going guy that can get along with just about anyone. Looking for a new challenge in life.
+                <p>Looking for a new challenge in life.
                     Looking
                     to find a job with positive people that have flexible minds and want me to be always improving as an
                     employee. When I am off the clock I like going on hikes around Duluth, mn, northshore area. You can
@@ -49,18 +49,19 @@
         <section class="personal-info">
             <h2 id="Work">Work</h2>
         </section>
-        <p> Here is some of my latest work. Let me know if you have any questions.</p>
+        <figure id = "workpic">
+        </figure>
         <br /><br /><br /><br />
         <section class="personal-info">
             <h2 id="Contact me">Contact Me</h2>
         </section>
-        <ul>
-            <l1>Phone Number: 320-583-2401</l1>
-            <li><a href="mailto:joel.getzke21@gmail.com">Email me</a>
-                <br>
-                <l1><a href="https://github.com/Glansburg" target="_blank">Github Profile</a></l1>
+        
+            <div>Phone Number: 320-583-2401</div>
+            <a href="mailto:joel.getzke21@gmail.com">Email me</a><br/>
+                
+            <a href="https://github.com/Glansburg" target="_blank">Github Profile</a></l1>
             <li>LinkedIn: In progress...</li>
-        </ul>
+
         <br /><br /><br /><br />
 
         <section class="personal-info">
