Attempted updates on media queries

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <h2 id="About me">About Me</h2>
 
             <article class="test">
-                <p>Looking for a new challenge in life.
-                    Looking
-                    to find a job with positive people that have flexible minds and want me to be always improving as an
-                    employee. When I am off the clock I like going on hikes around Duluth, mn, northshore area. You can
+                <p>Looking for a new challenge in life.<br/>
+                    Looking to find a job with positive people that have flexible minds and want me to be always improving as an
+                    employee. <br/>
+                     When I am off the clock I like going on hikes around Duluth, mn, northshore area. You can
                     catch me
                     hiking around the trails and foraging for wild mushrooms in the warmer days.</p>
         </section>
@@ -50,6 +50,7 @@
             <h2 id="Work">Work</h2>
         </section>
         <figure id = "workpic">
+            
         </figure>
         <br /><br /><br /><br />
         <section class="personal-info">
