--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <figure class="pageCover">
         <img src="./assets/images/joelmushroom.jpg">
         <h1>
-            <span>"You miss 100% of the shots you don't take." <br/><br/>-Wayne Gretzky</span>
+            <span>"You miss 100% of the shots you don't take." <br /><br />-Wayne Gretzky</span>
         </h1>
 
 
@@ -39,7 +39,7 @@
         <section class="personal-info">
             <h2 id="About me">About Me</h2>
 
-            <article class="test">
+            <article class="main-content">
                 <p>Looking for a new challenge in life.<br />
                     Looking to find a job with positive people that have flexible minds and want me to be always
                     improving as an
@@ -49,12 +49,15 @@
                     hiking around the trails and foraging for wild mushrooms in the warmer days.</p>
                 <figure id="HotAirBalloon">
                     <img src="./assets/images/HotAir.JPG">
-                </figure>
+
+            </article>
+            </figure>
         </section>
-        </article>
+
 
         <section class="personal-info">
             <h2 id="Work">Work</h2>
+            
             <div class="projects">
                 <div id="big-project">
 
@@ -75,7 +78,7 @@
 
 
             </div>
-
+          
         </section>
         <figure id="workpic">
 
