--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section class="section-work " id="scalephotos">
             <h2 id="Work">Work</h2>
-
+            <article id="about-me">
             <div class="projects">
                 <div id="big-project" class="photolinks">
                     <a href="./assets/images/Lobster_mushroom.png" target="new" alt="Lobster mushrooms">Project one.</a>
@@ -81,13 +81,14 @@
             </div>
 
             </div>
-
+            </article>
         </section>
 
 
         <br /><br /><br /><br />
         <section id="section-contact-me">
             <h2 id="Contact me">Contact Me</h2>
+            <article id="contact-me">
             <!--Start your span of hrefs here in AM tomorrow.-->
                <span class ="personal-links"> 
                 <a href="#">Phone Number: 320-583-2401</a>
@@ -95,12 +96,15 @@
                 <a href="https://github.com/Glansburg" target="_blank">Github Profile</a>
                 <a href="#">LinkedIn: In progress...<a>
             </span>
+            </article>
         </section>
 
 
         <section id="section-resume">
             <h2 id="Resume">Resume</h2>
+            <article id="resume">
             <p>PENDING...</p>
+            </article>
         </section>
 
     </main>
