--- a/index.html
+++ b/index.html
@@ -40,16 +40,14 @@
             <h2 id="About me">About Me</h2>
 
             <article id="about-me">
-                <p>Looking for a new challenge in life.<br />
+                <p id="about-me-paragraph">Looking for a new challenge in life.<br />
                     Looking to find a job with positive people that have flexible minds and want me to be always
                     improving as an
                     employee. <br />
                     When I am off the clock I like going on hikes around Duluth, mn, northshore area. You can
                     catch me
                     hiking around the trails and foraging for wild mushrooms in the warmer days.</p>
-                <figure id="HotAirBalloon">
-                    <img src="./assets/images/HotAir.JPG">
-
+              
             </article>
             </figure>
         </section>
