added borders and fixed picture overflow

--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
             <h2 id="Work">Work</h2>
             <article id="about-me">
             <div class="projects">
+             <a href="./assets/images/Lobster_mushroom.png" >
                 <div id="big-project" class="photolinks">
-                    <a href="./assets/images/Lobster_mushroom.png" target="new" alt="Lobster mushrooms">Project one.</a>
+                    <a target="new" alt="Lobster mushrooms">Project one.</a>
                     <p></p>
-
+                
                 </div>
-
+                </a>
                 <div class="small-projects" id="smallOne">
 
 
@@ -92,7 +93,7 @@
                 <a href="#">Phone Number: 320-583-2401</a>
                 <a href="mailto:joel.getzke21@gmail.com">Email me</a>
                 <a href="https://github.com/Glansburg" target="_blank">Github Profile</a>
-                <a href="#">LinkedIn: In progress...<a>
+                <a href="#">LinkedIn: In progress...</a>
             </span>
             </article>
         </section>
