fixed personal links

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <h2 id="Work">Work</h2>
             <article id="about-me">
             <div class="projects">
-             <a href="./assets/images/Lobster_mushroom.png" >
+             <a target="new" href="./assets/images/Lobster_mushroom.png" alt = "Lobster mushrooms" >
                 <div id="big-project" class="photolinks">
-                    <a target="new" alt="Lobster mushrooms">Project one.</a>
+                    <a></a>
                     <p></p>
                 
                 </div>
