added comments for better readability of code

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <main>
         <section id="section-about-me">
             <h2 id="About me">About Me</h2>
-
+            <!-- starting about -->
             <article id="about-me">
                 <p id="about-me-paragraph">Looking for a new challenge in life.<br />
                     Looking to find a job with positive people that have flexible minds and want me to be always
@@ -52,11 +52,12 @@
             </figure>
         </section>
 
-
+        <!--Starting work section-->
         <section class="section-work " id="scalephotos">
             <h2 id="Work">Work</h2>
             <article id="about-me">
             <div class="projects">
+            <!--pictures for furture projects, 5 of them-->
              <a target="new" href="./assets/images/Lobster_mushroom.png" alt = "Lobster mushrooms" >
                 <div id="big-project" class="photolinks">
                     <a></a>
@@ -84,11 +85,11 @@
         </section>
 
 
-        
+        <!-- contact me section on front end-->
         <section id="section-contact-me">
             <h2 id="Contact me">Contact Me</h2>
             <article id="contact-me">
-            <!--Start your span of hrefs here in AM tomorrow.-->
+            <!--Start your span of hrefs.-->
                <span class ="personal-links"> 
                 <a href="#">Phone Number: 320-583-2401</a>
                 <a href="mailto:joel.getzke21@gmail.com">Email me</a>
@@ -98,7 +99,7 @@
             </article>
         </section>
 
-
+        <!-- resume section-->
         <section id="section-resume">
             <h2 id="Resume">Resume</h2>
             <article id="resume">
@@ -108,7 +109,7 @@
 
     </main>
 
-
+<!-- footer section-->
     <footer>
         <section>
             <h4> Thanks for considering me!</h4>
