added project1 Url

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     When I am off the clock I like going on hikes around Duluth, mn, northshore area. You can
                     catch me
                     hiking around the trails and foraging for wild mushrooms in the warmer days.</p>
-              
+
             </article>
             </figure>
         </section>
@@ -56,21 +56,21 @@
         <section class="section-work " id="scalephotos">
             <h2 id="Work">Work</h2>
             <article id="about-me">
-            <div class="projects">
-            <!--pictures for furture projects, 5 of them-->
-             <a target="new" href="./assets/images/Lobster_mushroom.png" alt = "Lobster mushrooms" >
-                <div id="big-project" class="photolinks">
-                    <a></a>
-                    <p></p>
-                
+                <div class="projects">
+                    <!--pictures for furture projects, 5 of them-->
+                    <a target="new" href="./assets/images/Lobster_mushroom.png" alt="Lobster mushrooms">
+                        <div id="big-project" class="photolinks">
+                    </a>
+
+
                 </div>
+                <a class="changeBox" href="https://benwhann.github.io/Fortune-Of-The-Day/">
+                    <div class="small-projects" id="smallOne">
+
+
+
+                    </div>
                 </a>
-                <div class="small-projects" id="smallOne">
-
-
-
-                </div>
-
                 <div class="small-projects" id="smallTwo">
 
                 </div>
@@ -78,9 +78,9 @@
 
 
                 <div class="small-projects" id="smallFour"></div>
-            </div>
+                </div>
 
-            </div>
+                </div>
             </article>
         </section>
 
@@ -89,13 +89,13 @@
         <section id="section-contact-me">
             <h2 id="Contact me">Contact Me</h2>
             <article id="contact-me">
-            <!--Start your span of hrefs.-->
-               <span class ="personal-links"> 
-                <a href="#">Phone Number: 320-583-2401</a>
-                <a href="mailto:joel.getzke21@gmail.com">Email me</a>
-                <a href="https://github.com/Glansburg" target="_blank">Github Profile</a>
-                <a href="#">LinkedIn: In progress...</a>
-            </span>
+                <!--Start your span of hrefs.-->
+                <span class="personal-links">
+                    <a href="#">Phone Number: 320-583-2401</a>
+                    <a href="mailto:joel.getzke21@gmail.com">Email me</a>
+                    <a href="https://github.com/Glansburg" target="_blank">Github Profile</a>
+                    <a href="#">LinkedIn: In progress...</a>
+                </span>
             </article>
         </section>
 
@@ -103,13 +103,13 @@
         <section id="section-resume">
             <h2 id="Resume">Resume</h2>
             <article id="resume">
-            <p>PENDING...</p>
+                <p>PENDING...</p>
             </article>
         </section>
 
     </main>
 
-<!-- footer section-->
+    <!-- footer section-->
     <footer>
         <section>
             <h4> Thanks for considering me!</h4>
